--- a/source/_scss/molecules/_product_info.scss
+++ b/source/_scss/molecules/_product_info.scss
@@ -38,8 +38,7 @@
     }
   }
   .product_description li {
-    margin-bottom: 10px;
-    color: $colour_black;  
+    color: $colour_black; 
   }
 }
 
